Darwin Build Scripts Change History
-----------------------------------
Release 25 [4-Nov-2011]
  - darwinup: support for rebuilding xpchelper cache

Release 24.1 [17-Jun-2011]
	- Build fixes for newer compilers

Release 24 [10-Feb-2011]
	- darwinup: fix uninstall build-check safety
	- darwinup: remove unprebinding support
	- darwintrace: use modern interposing
	- darwintrace: add feature to ignore ROOT paths
	- darwintrace: add test suite

Release 23.1 [25-Jan-2011]
	- darwinup: strip symbols when building with Public configuration

Release 23 [03-Nov-2010]
	- darwinup: properly backup and restore existing content when
	  installing a root that replaces a directory with a file. 

Release 22 [27-Oct-2010]
	- darwinup: make man page clearer about what paths we support
	- darwinup: add safety measures to prevent recursive installs
	- darwinup: do not try to rollback installs that fail before
	  there is anything to rollback. 

Release 21.1 [29-Sep-2010]
	- darwinup: fix regression in v21 that broke installing roots when
	  the path is a symlink to a directory. 

Release 21 [17-Sep-2010]
	- darwinup: fix bug which silently failed to fully install
	  a root if the root had a directory where the destination
	  had a symlink to a directory
	- darwinup: test for object change during analyze stage instead
	  of install stage so we can bail out without having a root
	  partially installed then uninstalled
	- darwinup: add a full set of test cases for object change
	  conditions

Release 20.1 [02-Sep-2010]
	- darwinxref: build fix for format string warning

Release 20 [10-Aug-2010]
	- all: use CommonCrypto instead of OpenSSL
	- all: remove obsolete Makefiles

Release 19.1 [01-Jul-2010]
	- darwinup: fix bug which prevented remote root install when the remote
	  path is a symlink.

Release 19 [15-Jun-2010]
	- darwinup: fix crash when getgrnam fails
	- darwinup: add rename command
	- darwinup: touch /System/Library/Extensions when a kernel 
	  extension is modified.